# binding-mono

./: .gitignore  README.md  cargo.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
binding/: Cargo.toml  index.d.ts  index.js  package.json
binding/npm/darwin-x64/: README.md  package.json
binding/npm/linux-x64-gnu/: README.md  package.json
binding/npm/win32-x64-msvc/: README.md  package.json
binding/src/: lib.rs
binding_options/: Cargo.toml
binding_options/src/: lib.rs
cli/: package.json  tsconfig.json
cli/lib/: index.js
cli/lib/adapter/: index.js
cli/src/: index.ts
cli/src/adapter/: index.ts
core/: Cargo.toml
core/src/: main.rs
rspack_core/: Cargo.toml
rspack_core/src/: callback.rs  lib.rs  main.rs  options.rs
