[package]
name = "core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"binding_options" = { path ="../binding_options", features=[]}
"quick-js" = { version ="0.4.1"}
serde_json = "1.0.85"
serde = "1.0.144"